examples/test/testpolicy2246.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2246
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key37: value45
      key35: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value11
          key36: value1
          key8: value17
      podSelector:
        matchLabels:
          key35: value31
          key21: value8
